--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   },
   "homepage": "https://github.com/playerony/axios-try-catch-wrapper#readme",
   "dependencies": {
-    "axios": "^0.22.0",
-    "typescript": "^4.4.3"
+    "axios": "^0.22.0"
   },
   "devDependencies": {
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.2.1"
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
   }
 }
